# crewai-technical-analyst

./: .gitignore  LICENSE  README.md  crewai-test-ollama.py  crewai-test.py  custom_crewai_tool.py  pyproject.toml  requirements.txt  technical_analyst.py
output/01-09/BRK.B/: financial_analysis_1736396721.md
output/01-09/LYB/: financial_analysis_1736396286.md  investment_recommendation_1736396286.md  research_1736396286.md  technical_analysis_1736396286.md
output/01-09/TLT/: financial_analysis_1736396532.md  investment_recommendation_1736396532.md  research_1736396532.md  technical_analysis_1736396532.md
src/technical_analyst/: crew.py  main.py
src/technical_analyst/config/: agents.yaml  tasks.yaml
src/technical_analyst/tools/: custom_tool.py
