[project]
name = "technical_analyst"
version = "0.1.0"
description = "technical-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0",
    "yfinance>=0.2.51",
]

[project.scripts]
technical_analyst = "technical_analyst.main:run"
run_crew = "technical_analyst.main:run"
train = "technical_analyst.main:train"
replay = "technical_analyst.main:replay"
test = "technical_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
